# GraphRAG-Neo4j-Research-Framework

./: PROJECT_STRUCTURE.md  README.md  VALIDATION_GUIDE.md  advanced_graphrag_demo.py  clean_test.py  debug_apoc.py  env_example.txt  environment.yml  fix_pytorch_version.py  fix_version_compatibility.py  mypy.ini  pyproject.toml  refresh_database.py  requirements.txt  setup.py  setup_environment.bat  setup_environment.md  setup_system.py  simple_test.py  test_auto_scraper.py  test_dynamic_scraper.py  test_embedding_fix.py  test_import.py  test_suite.py  test_system.py  test_validation.py  view_database.py
docs/: PERFORMANCE_IMPROVEMENTS.md  PROJECT_STRUCTURE.md  README.md  TROUBLESHOOTING.md
fix_scripts/: fix_huggingface_hub.py
graphrag_neo4j_research_framework.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: arxiv_scraper.py  graph_visualizer.py  vector_index_builder.py
src/: __init__.py  custom_types.py  validation.py
src/app/: __init__.py  lazy_components.py  main.py  performance.py
src/data_ingestion/: __init__.py  arxiv_ingestion.py  arxiv_scraper.py
src/database/: __init__.py  init_database.py
src/graph_rag/: __init__.py  generator.py  graph_retriever.py  orchestrator.py
src/visualization/: __init__.py  graph_visualizer.py
test_scripts/: test_arxiv_scraper.py  test_performance.py
tools/: downgrade_pytorch.py
